<resources>
    <string name="app_name">MuTodo</string>
    <string name="app_description">Gerenciamento de tarefas</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="today">Hoje</string>
    <string name="tomorrow">Amanhã</string>
    <string name="pattern_month_day_short">dd \'de\' MMM</string>
    <string name="pattern_month_day_long">dd \'de\' MMMM</string>

    <!--    notification-->
    <string name="tasks_to_do">MuTodo</string>
    <string name="most_recently_task">Tarefa mais recente:</string>
    <string name="touch_to_check">Toque para visualizar</string>
    <string name="notification_title_task_alarms">Tarefas</string>
    <string name="new_task">Nova Tarefa</string>

    <!--    categories-->
    <string name="welcome">Olá {name}</string>
    <string name="user">usuário</string>
    <string name="all_tasks">{count} itens cadastrados</string>
    <string name="no_task_remaining">nenhum item pendente</string>
    <string name="tasks_remaining">{count} tarefas</string>
    <string name="no_tasks_remaining_into_category">nenhuma tarefa</string>
    <string name="all_category_title">Todas</string>
    <string name="work_category_title">Trabalho</string>
    <string name="studies_category_title">Estudos</string>
    <string name="general_category_title">Gerais</string>
    <string name="fun_category_title">Diversão</string>
    <string name="personal_category_title">Pessoal</string>
    <string name="gym_category_title">Exercícios</string>
    <string name="go_to_all_tasks">Ver tudo</string>

    <!--    task-->
    <string name="add_tasks">Adicionar tarefas</string>
    <string name="tasks_title">Tarefas</string>
    <string name="no_alarm_scheduled">Nenhum alarme agendado</string>

    <!--    add task-->
    <string name="add_task">Adicionar tarefa</string>
    <string name="add_task_title_hint">Título</string>
    <string name="add_task_description_hint">Descrição</string>
    <string name="no_tasks">Nenhuma tarefa cadastrada…</string>
    <string name="add_task_submit">SALVAR</string>
    <string name="add_alarm_unchecked">Alarme desabilitado</string>
    <string name="add_alarm_checked">Alarme habilitado</string>
    <string name="alarm_repeat_initial_text">Sem repetição</string>
    <string name="alarm_repeat_all_days">Repetir todos os dias</string>

    <!--    settings-->
    <string name="settings">Configurações</string>
    <string name="user_name">Nome de usuário</string>
    <string name="enable_vibration">Habilitar vibração</string>

    <!--    about-->
    <string name="about">Sobre</string>
    <string name="about_description">O MuTudo é um aplicativo de gerenciamento de tarefas que vai te ajudar a se programar, nem que a vaca tussa.</string>
    <string name="version">Versão</string>
    <string name="developed_by">Desenvolvedor</string>
    <string name="developer">Murillo M. Maciel</string>

</resources>