<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.maciel.murillo.mutodo.modules.settings.presentation.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_light"
        android:paddingTop="36dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:onClick="@{() -> vm.onBackClick()}"
            android:padding="8dp"
            android:src="@drawable/ic_back_36"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_cow_logo"
            app:layout_constraintBottom_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="36dp"
            android:textColorHint="@color/gray_dark_1"
            android:theme="@style/TextLabel"
            app:hintTextColor="@color/gray_dark_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/user_name"
                android:imeOptions="actionDone"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@{vm.userName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="24dp"
            android:checked="@={vm.vibrationEnabled}"
            android:fontFamily="@font/roboto"
            android:text="@string/enable_vibration"
            android:textColor="@color/gray_dark_1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_user_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_submit_button"
            android:enabled="@{vm.submitEnabled.booleanValue()}"
            android:onClick="@{() -> vm.onSubmitClick()}"
            android:text="@string/add_task_submit"
            android:textColor="@color/white_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>